// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show our component with personalized image 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage should show the component with product's image on it 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
